# ar_kinect_project

./: CMakeLists.txt  README.md  package.xml  prueba
coppelia_scenes/: Kinect_Odometry.ttt  Kinect_Odometry_PF.ttt  Kinect_Scene.ttt  Kinect_Scene_2.ttt  Kinect_Scene_3.ttt  PF_Odometry.ttt  Ros_Robot_Odometry.ttt
launch/: float32multiarray_to_pointcloud2.launch  gmapping.launch  main.launch  register.launch  track_kinect.launch  track_no_kinect.launch
maps/: mapTag.pgm  mapTag.yaml
rviz_config/: ar_kinect_rviz.rviz
src/: .tag_cast.cpp.kate-swp  .track_pose.cpp.kate-swp  .transformer.cpp.kate-swp  cloud_to_rgb.cpp  float32_to_pointcloud2.cpp  particlefilter.cpp  random_direction.cpp  ros_manager.cpp  tag0_cast.cpp  tag_cast.cpp  track_pose.cpp  transformer.cpp
